# test-result-aggregator

./: CMakeLists.txt  README.md  input.txt
include/: aggregator.h  test_t.h  ui-classes.h  ui.h
src/: aggregator.cpp  main.cpp  test_t.cpp  ui-classes.cpp  ui.cpp  utils.cpp
